Fixed Sonar's rules voilation